Moved toolchain plugin to plugin section so it's always used; added profile for errorprone+nulaway; changed to own jdepend-maven-plugin